objects/Playground_Job_Event__e.object
<CustomObject>
    <description>This is the event object for monitoring Playground job changes</description>
    <fields>
        <fullName>Action__c</fullName>
        <description>This is the action of the playground job record.</description>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copado_Job_Id__c</fullName>
        <label>Copado Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payload__c</fullName>
        <label>Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Playground_Id__c</fullName>
        <description>The ID of the associated Playground for better filtering</description>
        <label>Playground Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <description>The ID of the Playground Job record.</description>
        <label>Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isFinished__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isFinished</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSuccess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSuccess</label>
        <type>Checkbox</type>
    </fields>
    <label>Playground Job Event</label>
    <pluralLabel>Playground Job Events</pluralLabel>
</CustomObject>